# TabularDataFramework

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/DataFrame/: DataFrame.cpp  DataFrame.h  DataFrameBufferManager.hpp  Row.h  RowCA.h  RowCVEstoque.h  RowCVOrdemDeCompra.h  RowCVProdutos.h  RowCVUsuario.h  RowCadeAnalytics.h  RowContaVerde.h  RowDCAuditoria.h  RowDCComportamento.h  RowDCFalhas.h  RowDataCat.h  Time.h  Uteis.h  dataframe.hpp  row.hpp  teste_df.cpp  time.hpp  utils.hpp
include/RepositorySaver/: RepositorySaver.hpp  testRepository.cpp  testRepository.py
include/handler/: balancer.h  handler.h  parser.hpp
include/http/: http_server.hpp  http_session.hpp
include/queue/: queue.h  queue.hpp  semaphore.h  test_queue.cpp
include/triggers/: request_trigger.hpp  timer_trigger.hpp
include/utils/: file_processor.hpp  watchdog.hpp
scripts/mock/: mock.py
src/: CMakeLists.txt
src/RepositorySaver/: RepositorySaver.cpp
src/dataframe/: dataframe.cpp  row.cpp  time.cpp  utils.cpp
src/handler/: Dataframe.cpp  balancer.cpp  handler.cpp  parser.cpp
src/http/: http_server.cpp  http_session.cpp
src/triggers/: request_trigger.cpp  timer_trigger.cpp
src/utils/: file_processor.cpp  watchdog.cpp
